samples/_failures_safe/1761194847_94c186_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38bccebb.c: In function ‘main’:
./samples/SAFE/__tmp_38bccebb.c:144:9: error: expected declaration or statement at end of input
  144 |         if (choice == 5) {
      |         ^~
./samples/SAFE/__tmp_38bccebb.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38bccebb.c:144:9: error: expected declaration or statement at end of input
